[FIX] SideNav para que sea visible en mobile

--- a/frontend/digital-booking-g4/src/components/Footer/Footer.module.css
+++ b/frontend/digital-booking-g4/src/components/Footer/Footer.module.css
@@ -4,7 +4,6 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    z-index: 999;
 }
 
 .contenedorFooter {
